feat: work on portal nuxt setup

--- a/dev/resources/nginx.conf
+++ b/dev/resources/nginx.conf
@@ -50,10 +50,6 @@ http {
         # hmr
         proxy_read_timeout 86400;
         
-        location = / {  
-          return 302 /portals-manager/dev;
-        }
-
         location = /portals-manager/ {  
           return 302 /portals-manager/dev;
         }
@@ -73,6 +69,10 @@ http {
         location /data-fair {
           rewrite  ^/data-fair/(.*) /$1 break;
           proxy_pass http://localhost:6201;
+        }
+
+        location / {  
+          proxy_pass http://localhost:5657;
         }
     }
 }
