--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build-types": "mkdir -p ui/src/components/vjsf && rm -f ui/src/components/vjsf/* && df-build-types . --vjsf-dir ui/src/components/vjsf",
     "dev-api": "npm -w api run dev",
     "dev-deps": "docker compose --profile dev up -d --wait",
+    "stop-dev-deps": "docker compose --profile dev stop",
     "test-deps": "docker compose --profile test up -d --wait",
-    "stop-dev-deps": "docker compose stop",
+    "stop-test-deps": "docker compose --profile test stop",
     "dev-ui": "npm -w ui run dev",
     "dev-ingress-manager": "NODE_ENV=development node --watch --experimental-strip-types dev/ingress-manager.ts",
     "dev-zellij": "export DEV_SHELL=$(basename \"$SHELL\") && zellij --layout .zellij.kdl && rm data/zellij-deps-ready",
