--- a/portal/package.json
+++ b/portal/package.json
@@ -17,6 +17,7 @@
     "@nuxt/eslint": "^1.8.0",
     "eslint": "^9.33.0",
     "nuxt": "^4.0.3",
+    "nuxt-security": "^2.3.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   }
