--- a/api/package.json
+++ b/api/package.json
@@ -13,14 +13,17 @@
     "#types/*": "./types/*"
   },
   "dependencies": {
-    "@data-fair/lib-express": "^1.20.7",
+    "@data-fair/lib-express": "^1.20.8",
     "config": "^4.0.0",
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "http-terminator": "^3.2.0",
     "mongodb": "^6.17.0",
-    "prom-client": "^15.1.3"
+    "multer": "^2.0.2",
+    "piscina": "^5.1.3",
+    "prom-client": "^15.1.3",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@data-fair/lib-utils": "^1.6.1"
