--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,8 @@
     "multer": "^2.0.2",
     "piscina": "^5.1.3",
     "prom-client": "^15.1.3",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@data-fair/lib-utils": "^1.6.1"
