--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,8 @@
     "piscina": "^5.1.3",
     "prom-client": "^15.1.3",
     "sharp": "^0.34.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@data-fair/lib-utils": "^1.6.1"
