--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@data-fair/frame": "^0.12.1",
+    "@data-fair/lib-common-types": "^1.15.0",
     "@data-fair/lib-vue": "^1.21.1",
     "@data-fair/lib-vuetify": "^1.11.0",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
