--- a/portal/package.json
+++ b/portal/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^4.0.3",
     "nuxt-security": "^2.3.0",
     "undici": "^7.14.0",
+    "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   }
