--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "piscina": "^5.1.3",
     "prom-client": "^15.1.3",
+    "resolve-path": "^1.4.0",
     "sharp": "^0.34.3",
     "slugify": "^1.6.6",
     "tinycolor2": "^1.6.0"
