--- a/portal/package.json
+++ b/portal/package.json
@@ -21,6 +21,7 @@
     "undici": "^7.14.0",
     "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.9.5"
   }
 }
