--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   "type": "module",
   "scripts": {
     "build-types": "mkdir -p ui/src/components/vjsf && rm -f ui/src/components/vjsf/* && df-build-types . --vjsf-dir ui/src/components/vjsf",
+    "check-types": "tsc && npm -w ui run check-types",
     "dev-api": "npm -w api run dev",
     "dev-deps": "docker compose --profile dev up -d --wait",
     "stop-dev-deps": "docker compose --profile dev stop",
     "test-deps": "docker compose --profile test up -d --wait",
     "stop-test-deps": "docker compose --profile test stop",
     "dev-ui": "npm -w ui run dev",
-    "dev-ingress-manager": "NODE_ENV=development node --watch --experimental-strip-types dev/ingress-manager.ts",
+    "dev-ingress-manager": "NODE_ENV=development node --watch dev/ingress-manager.ts",
     "dev-zellij": "export DEV_SHELL=$(basename \"$SHELL\") && zellij --layout .zellij.kdl && rm data/zellij-deps-ready",
     "lint": "eslint . && npm -w ui run lint",
     "lint-fix": "eslint --fix . && npm -w ui run lint-fix",
-    "test": "npm run test-base -- test-it/*.ts",
-    "test-base": "NODE_ENV=test node --test-force-exit --test-concurrency=1 --test",
-    "check-types": "tsc && npm -w ui run check-types",
     "prepare": "husky || true",
     "prepare-fonts": "rm -rf api/assets/fonts && mkdir api/assets/fonts && node dev/scripts/prepare-fonts.js",
-    "quality": "npm run dev-deps && npm run lint && npm run build-types && npm run check-types && npm -w ui run build && npm run test && npm audit --omit=dev --audit-level=critical"
+    "quality": "npm run dev-deps && npm run lint && npm run build-types && npm run check-types && npm -w ui run build && npm run test && npm audit --omit=dev --audit-level=critical",
+    "test": "npm run test-base test-it/*.ts",
+    "test-base": "NODE_ENV=test EVENTS_LOG_LEVEL=alert node --disable-warning=ExperimentalWarning --test-force-exit --test-concurrency=1 --test",
+    "test-only": "npm run test-base -- --test-only test-it/*.ts"
   },
   "workspaces": [
     "api",
@@ -38,14 +39,17 @@
     "url": "https://gitlab.com/data-fair/portals/issues"
   },
   "homepage": "https://gitlab.com/data-fair/portals#readme",
+  "engines": {
+    "node": "v24"
+  },
   "dependencies": {
-    "@data-fair/lib-types-builder": "^1.8.3",
-    "@types/debug": "^4.1.12"
+    "@data-fair/lib-types-builder": "^1.8.3"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.8.1",
     "@data-fair/lib-node": "^2.9.0",
     "@koumoul/vjsf-compiler": "^1.1.0",
+    "@types/debug": "^4.1.12",
     "@types/config": "^3.3.5",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
