--- a/portal/package.json
+++ b/portal/package.json
@@ -11,6 +11,9 @@
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
+  "imports": {
+    "#api/types/*": "../api/types/*"
+  },
   "dependencies": {
     "@data-fair/lib-node": "^2.8.2",
     "@data-fair/lib-utils": "^1.6.1",
