--- a/ui/package.json
+++ b/ui/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
+  "imports": {
+    "#api/types/*": "../api/types/*"
+  },
   "dependencies": {
     "@data-fair/frame": "^0.12.1",
     "@data-fair/lib-common-types": "^1.15.0",
     "@data-fair/lib-vue": "^1.21.1",
-    "@data-fair/lib-vuetify": "^1.11.0",
+    "@data-fair/lib-vuetify": "^1.11.1",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@koumoul/v-iframe": "^2.4.5",
     "@koumoul/vjsf": "^3.19.1",
