--- a/portal/package.json
+++ b/portal/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@data-fair/lib-node": "^2.8.2",
     "@data-fair/lib-utils": "^1.6.1",
+    "@mdi/js": "^7.4.47",
     "@nuxt/eslint": "^1.8.0",
     "eslint": "^9.33.0",
     "nuxt": "^4.0.3",
