feat: add footer

--- a/dev/resources/nginx.conf
+++ b/dev/resources/nginx.conf
@@ -49,6 +49,13 @@ http {
 
         # hmr
         proxy_read_timeout 86400;
+
+        location = / {
+          if ($host = "localhost") {
+            return 302 /portals-manager/dev;
+          }
+          proxy_pass http://localhost:5657;
+        }
         
         location = /portals-manager/ {  
           return 302 /portals-manager/dev;
