feat: add pages on personal space

--- a/portal/package.json
+++ b/portal/package.json
@@ -19,12 +19,16 @@
     "@data-fair/lib-node": "^2.8.2",
     "@data-fair/lib-utils": "^1.6.1",
     "@data-fair/lib-vue": "^1.23.1",
+    "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@mdi/js": "^7.4.47",
     "@nuxt/eslint": "^1.8.0",
+    "@nuxtjs/i18n": "^10.1.0",
+    "build": "^0.1.4",
     "dayjs": "^1.11.18",
     "eslint": "^9.33.0",
     "nuxt": "^4.1.1",
     "nuxt-security": "^2.3.0",
+    "run": "^1.5.0",
     "undici": "^7.14.0",
     "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.18",
