feat: add breadcrumbs for processings

--- a/dev/resources/nginx.conf
+++ b/dev/resources/nginx.conf
@@ -30,7 +30,6 @@ http {
         ''      close;
     }
 
-    # main/manager domain
     server {
         listen 5607;
         server_name _;
@@ -61,6 +60,10 @@ http {
           return 302 /portals-manager/dev;
         }
 
+        location / {
+          proxy_pass http://localhost:5657;
+        }
+
         location /portals-manager/api/ {
           proxy_pass http://localhost:8097;
         }
@@ -70,16 +73,20 @@ http {
         }
 
         location /simple-directory/ {
-          proxy_pass http://localhost:8087;
+          proxy_pass http://localhost:8081;
         }
 
         location /data-fair {
           rewrite  ^/data-fair/(.*) /$1 break;
-          proxy_pass http://localhost:6201;
+          proxy_pass http://localhost:8082;
         }
 
-        location / {  
-          proxy_pass http://localhost:5657;
+        location /events/ {
+            proxy_pass http://localhost:8083;
+        }
+
+        location /processings/ {
+            proxy_pass http://localhost:8084;
         }
     }
 }
