feat: add dataset page

--- a/dev/resources/nginx.conf
+++ b/dev/resources/nginx.conf
@@ -88,5 +88,10 @@ http {
         location /processings/ {
             proxy_pass http://localhost:8084;
         }
+
+        location /openapi-viewer/ {
+            return 200 "Service openapi-viewer (inactif en dev)\nUrl = $scheme://$http_host$request_uri";
+            add_header Content-Type text/plain;
+        }
     }
 }
