--- a/portal/package.json
+++ b/portal/package.json
@@ -26,13 +26,20 @@
     "build": "^0.1.4",
     "dayjs": "^1.11.18",
     "eslint": "^9.33.0",
+    "http-link-header": "^1.1.3",
     "nuxt": "^4.1.1",
     "nuxt-security": "^2.3.0",
     "run": "^1.5.0",
+    "streamsaver": "^2.0.6",
     "undici": "^7.14.0",
     "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
+    "vue3-social-sharing": "^1.4.1",
     "vuetify": "^3.9.5"
+  },
+  "devDependencies": {
+    "@types/http-link-header": "^1.0.7",
+    "@types/streamsaver": "^2.0.5"
   }
 }
