refactor: portal routing system

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "check-types": "tsc && npm -w ui run check-types",
     "dev-api": "npm -w api run dev",
     "dev-deps": "docker compose --profile dev up -d --wait",
-    "stop-dev-deps": "docker compose --profile dev stop",
+    "stop-dev-deps": "docker compose stop",
     "test-deps": "docker compose --profile test up -d --wait",
-    "stop-test-deps": "docker compose --profile test stop",
     "dev-ui": "npm -w ui run dev",
     "dev-ingress-manager": "NODE_ENV=development node --disable-warning=ExperimentalWarning --watch dev/ingress-manager.ts",
     "dev-zellij": "export DEV_SHELL=$(basename \"$SHELL\") && zellij --layout .zellij.kdl && rm data/zellij-deps-ready",
