--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,11 +135,11 @@ services:
     volumes:
       - elasticsearch-data:/usr/share/elasticsearch/data
     healthcheck:
-      test: ["CMD", "nc", "-z", "-v", "localhost", "9200"]
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
       start_period: 10s
-      interval: 5s
-      retries: 5
-
+      timeout: 5s
+      interval: 2s
+      retries: 50
 
 volumes:
   mongo-data:
