--- a/ui/package.json
+++ b/ui/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "NODE_CONFIG_DIR=../api/config/ vite --port 6227",
     "build": "vite build",
-    "preview": "vite preview",
     "check-types": "vue-tsc",
+    "dev": "NODE_CONFIG_DIR=../api/config/ vite --port 6227",
     "lint": "eslint .",
-    "lint-fix": "eslint --fix ."
+    "lint-fix": "eslint --fix .",
+    "preview": "vite preview"
   },
   "imports": {
     "#api/types/*": "../api/types/*"
