--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@data-fair/lib-express": "^1.20.8",
+    "@data-fair/portals-shared-markdown": "*",
     "config": "^4.0.0",
     "debug": "^4.4.1",
     "express": "^5.1.0",
