--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "@data-fair/lib-common-types": "^1.16.3",
     "@data-fair/lib-vue": "^1.23.3",
     "@data-fair/lib-vuetify": "^1.11.1",
+    "@data-fair/portals-shared-markdown": "*",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@koumoul/v-iframe": "^2.4.5",
     "@koumoul/vjsf": "^3.22.1",
@@ -26,8 +27,6 @@
     "@types/config": "^3.3.5",
     "@vitejs/plugin-vue": "^6.0.0",
     "dayjs": "^1.11.13",
-    "marked": "^15.0.12",
-    "sanitize-html": "^2.17.0",
     "sass-embedded": "^1.89.2",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
