--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,7 @@
     "strict": true,
     "allowJs": true,
     "checkJs": true,
-    "skipLibCheck": true,
-    "paths": {
-      "#shared/*": ["./shared/*"]
-    }
+    "skipLibCheck": true
   },
   "exclude": ["node_modules", "types", "ui", "portal", "dev", "api/assets", "google-fonts-complete/"],
   "types": ["vuetify"]
