--- a/portal/package.json
+++ b/portal/package.json
@@ -20,6 +20,7 @@
     "@data-fair/lib-node": "^2.8.2",
     "@data-fair/lib-utils": "^1.6.1",
     "@data-fair/lib-vue": "^1.23.3",
+    "@data-fair/portals-shared-markdown": "*",
     "@mdi/js": "^7.4.47",
     "@nuxt/eslint": "^1.8.0",
     "@nuxtjs/i18n": "^10.1.0",
