--- a/portal/package.json
+++ b/portal/package.json
@@ -23,7 +23,7 @@
     "@data-fair/portals-shared-markdown": "*",
     "@mdi/js": "^7.4.47",
     "@nuxt/eslint": "^1.8.0",
-    "@nuxtjs/i18n": "^10.1.0",
+    "@nuxtjs/i18n": "^10.1.2",
     "dayjs": "^1.11.18",
     "eslint": "^9.33.0",
     "nuxt": "^4.1.1",
@@ -33,6 +33,7 @@
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue3-social-sharing": "^1.4.1",
-    "vuetify": "^3.9.5"
+    "vuetify": "^3.9.5",
+    "vuetify-nuxt-module": "^0.18.8"
   }
 }
