--- a/portal/package.json
+++ b/portal/package.json
@@ -16,6 +16,8 @@
     "#api/types/*": "../api/types/*"
   },
   "dependencies": {
+    "@analytics/google-analytics": "^1.1.0",
+    "@analytics/google-tag-manager": "^0.6.0",
     "@data-fair/frame": "^0.14.0",
     "@data-fair/lib-node": "^2.8.2",
     "@data-fair/lib-utils": "^1.6.1",
@@ -24,6 +26,7 @@
     "@mdi/js": "^7.4.47",
     "@nuxt/eslint": "^1.8.0",
     "@nuxtjs/i18n": "^10.1.2",
+    "analytics": "^0.8.19",
     "dayjs": "^1.11.18",
     "eslint": "^9.33.0",
     "nuxt": "^4.1.1",
