--- a/portal/package.json
+++ b/portal/package.json
@@ -31,6 +31,7 @@
     "eslint": "^9.33.0",
     "nuxt": "^4.1.1",
     "nuxt-security": "^2.3.0",
+    "piano-analytics-js": "^6.16.4",
     "undici": "^7.14.0",
     "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.18",
