--- a/dev/resources/nginx.conf
+++ b/dev/resources/nginx.conf
@@ -69,6 +69,9 @@ http {
           proxy_pass http://localhost:8097;
         }
 
+        location ~ /portals-manager/(.*)-ui-config.js {
+          proxy_pass http://localhost:8097;
+        }
         location /portals-manager/ {
           proxy_pass http://localhost:6227;
         }
