--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/config": "^3.3.5",
     "@types/debug": "^4.1.12",
     "@types/express": "^5.0.3",
+    "@types/memoizee": "^0.4.12",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.14",
     "@types/resolve-path": "^1.4.3",
