--- a/shared/markdown/package.json
+++ b/shared/markdown/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "main": "index.ts",
   "dependencies": {
+    "@data-fair/lib-utils": "^1.8.0",
     "marked": "^15.0.12",
     "sanitize-html": "^2.17.0"
   }
