--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "form-data": "^4.0.4",
     "husky": "^9.1.7",
     "neostandard": "^0.12.2",
+    "patch-package": "^8.0.1",
     "tough-cookie": "^5.1.2"
   }
 }
