--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "node": "v24"
   },
   "dependencies": {
-    "@data-fair/lib-types-builder": "^1.11.2"
+    "@data-fair/lib-types-builder": "^1.11.2",
+    "patch-package": "^8.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.8.1",
