--- a/portal/package.json
+++ b/portal/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "check-types": "nuxt typecheck",
-    "dev": "NUXT_MONGO_URL=mongodb://localhost:27017/data-fair-portals-development NUXT_PORTAL_URL_PATTERN=http://{subdomain}.portals.localhost:5607  NUXT_PRIVATE_DIRECTORY_URL=http://localhost:8081 nuxt dev",
+    "dev": "NUXT_MONGO_URL=mongodb://localhost:27017/data-fair-portals-development NUXT_PORTAL_URL_PATTERN=http://{subdomain}.portals.localhost:5607 NUXT_PRIVATE_DIRECTORY_URL=http://localhost:8081 NUXT_FRAME_ANCESTORS=http://localhost:5607 nuxt dev",
     "generate": "nuxt generate",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
@@ -18,7 +18,7 @@
   "dependencies": {
     "@analytics/google-analytics": "^1.1.0",
     "@analytics/google-tag-manager": "^0.6.0",
-    "@data-fair/frame": "^0.14.0",
+    "@data-fair/frame": "^0.17.0",
     "@data-fair/lib-node": "^2.8.2",
     "@data-fair/lib-utils": "^1.6.1",
     "@data-fair/lib-vue": "^1.23.3",
