--- a/dev/resources/nginx.conf
+++ b/dev/resources/nginx.conf
@@ -33,6 +33,7 @@ http {
     server {
         listen 5607;
         server_name _;
+        http2 on;
         client_max_body_size 0;
 
         # Transmit host, protocol and user ip, we use it for routing, rate limiting, etc.
