feat: add migration script for resource modifiers from created/updated to createdAt/updatedAt

--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development DEBUG=sync-portal,upgrade node --watch --experimental-strip-types index.ts"
+    "dev": "NODE_ENV=development DEBUG=sync-portal,upgrade* node --watch --experimental-strip-types index.ts"
   },
   "imports": {
     "#config": "./src/config.ts",
