--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "@data-fair/lib-node": "^2.9.1",
     "@data-fair/lib-utils": "^1.7.1",
     "@data-fair/portals-shared-markdown": "*",
+    "decode-ico": "^0.4.1",
     "config": "^4.0.0",
     "debug": "^4.4.1",
     "express": "^5.1.0",
