fix: image source was not initialized

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@data-fair/portals",
-  "version": "2.13.1",
+  "version": "2.14.0",
   "description": "Portals manager for data-fair",
   "main": "index.js",
   "type": "module",
@@ -13,15 +13,15 @@
     "test-deps": "docker compose --profile test up -d --wait",
     "dev-ui": "npm -w ui run dev",
     "dev-ingress-manager": "NODE_ENV=development node --disable-warning=ExperimentalWarning --watch dev/ingress-manager.ts",
-    "dev-zellij": "export DEV_SHELL=$(basename \"$SHELL\") && zellij --layout .zellij.kdl && rm data/zellij-deps-ready",
+    "dev-zellij": "export DEV_SHELL=$(basename \"$SHELL\") && zellij --layout .zellij.kdl",
     "lint": "eslint . && npm -w ui run lint",
     "lint-fix": "eslint --fix . && npm -w ui run lint-fix",
     "prepare": "husky || true",
     "prepare-fonts": "rm -rf api/assets/fonts && mkdir api/assets/fonts && node dev/scripts/prepare-fonts.ts",
     "quality": "npm run dev-deps && npm run lint && npm run build-types && npm -w ui run build && npm run check-types && npm run test && npm audit --omit=dev --audit-level=critical",
-    "test": "npm run test-base test-it/*.ts",
     "test-base": "NODE_ENV=test EVENTS_LOG_LEVEL=alert node --disable-warning=ExperimentalWarning --test-force-exit --test-concurrency=1 --test",
-    "test-only": "npm run test-base -- --test-only test-it/*.ts"
+    "test-only": "npm run test-base -- --test-only test-it/*.ts",
+    "test": "npm run test-base test-it/*.ts"
   },
   "workspaces": [
     "api",
@@ -58,9 +58,9 @@
     "@types/resolve-path": "^1.4.3",
     "@types/sanitize-html": "^2.16.0",
     "commitlint": "^19.8.1",
-    "eslint": "^9.31.0",
-    "eslint-plugin-vue": "^10.3.0",
-    "eslint-plugin-vuetify": "^2.5.2",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "eslint-plugin-vuetify": "^2.5.3",
     "form-data": "^4.0.4",
     "husky": "^9.1.7",
     "neostandard": "^0.12.2",
