--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui",
-  "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "build": "vite build",
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@data-fair/frame": "^0.17.0",
-    "@data-fair/lib-common-types": "^1.16.3",
-    "@data-fair/lib-vue": "^1.23.3",
+    "@data-fair/lib-common-types": "^1.19.4",
+    "@data-fair/lib-vue": "^1.24.2",
     "@data-fair/lib-vuetify": "^1.13.0",
     "@data-fair/portals-shared-markdown": "*",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
