--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nuxtjs/i18n": "^7.2.2",
     "agentkeepalive": "^4.5.0",
     "ajv": "^6.12.6",
+    "buffer": "^6.0.3",
     "cacheable-lookup": "^6.0.4",
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
