--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@data-fair/sd-express": "^1.4.3",
     "@koumoul/nuxt-config-inject": "^0.4.10",
+    "@koumoul/v-iframe": "^1.4.2",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.2",
     "agentkeepalive": "^4.5.0",
