--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   "imports": {
     "#config": "./src/config.ts",
     "#mongo": "./src/mongo.ts",
+    "#es": "./src/es.ts",
     "#doc": "./doc/index.ts",
     "#doc/*": "./doc/*",
     "#types": "./types/index.ts",
@@ -17,6 +18,7 @@
     "@data-fair/lib-node": "^2.9.1",
     "@data-fair/lib-utils": "^1.8.0",
     "@data-fair/portals-shared-markdown": "*",
+    "@elastic/elasticsearch": "^9.3.1",
     "config": "^4.0.0",
     "debug": "^4.4.1",
     "decode-ico": "^0.4.1",
