--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
   "dependencies": {
     "@data-fair/sd-express": "^1.4.3",
     "@koumoul/nuxt-config-inject": "^0.4.10",
+    "@koumoul/v-iframe": "^1.4.2",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.2",
     "agentkeepalive": "^4.5.0",
     "ajv": "^6.12.6",
+    "buffer": "^6.0.3",
     "cacheable-lookup": "^6.0.4",
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
@@ -102,9 +104,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
     "@commitlint/config-conventional": "^17.4.4",
-    "@data-fair/frame": "^0.12.0",
+    "@data-fair/frame": "^0.18.0",
     "@data-fair/sd-vue": "4.0.0",
-    "@koumoul/v-iframe": "^1.4.2",
     "@koumoul/vjsf": "2.22.1",
     "@koumoul/vue-multianalytics": "^1.11.4",
     "@mdi/font": "^7.0.96",
