--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "memoizee": "^0.4.17",
     "mongodb": "^6.17.0",
     "multer": "^2.0.2",
+    "parse5": "^7.2.1",
     "piscina": "^5.1.3",
     "prom-client": "^15.1.3",
     "resolve-path": "^1.4.0",
