--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,13 +26,14 @@ services:
     depends_on:
       - mongo
     environment:
+      - PORT=8081
       - ADMINS=["superadmin@test.com"]
       - CIPHER_PASSWORD=dev
       - CONTACT=contact@test.com
       - MANAGE_SITES=true
-      - MONGO_URL=mongodb://localhost:27017/simple-directory
+      - MONGO_URL=mongodb://localhost:27018/simple-directory
       - OBSERVER_ACTIVE=false
-      - PUBLIC_URL=http://localhost:5600/simple-directory
+      - PUBLIC_URL=http://localhost:5610/simple-directory
       - STORAGE_TYPE=file
       - SECRET_SITES=secret-sites
       # When we test permissions, we need to authenticate many users from the same IP.
@@ -59,16 +60,16 @@ services:
       elasticsearch:
         condition: service_healthy
     environment:
-      - PORT=8081
-      - MONGO_URL=mongodb://localhost:27017/data-fair
-      - DIRECTORY_URL=http://localhost:5600/simple-directory
-      - PRIVATE_EVENTS_URL=http://localhost:8083
-      - PRIVATE_DIRECTORY_URL=http://localhost:8080
-      - PUBLIC_URL=http://localhost:5600/data-fair
-      - WS_PUBLIC_URL=ws://localhost:5600/data-fair
+      - PORT=8082
+      - MONGO_URL=mongodb://localhost:27018/data-fair
+      - DIRECTORY_URL=http://localhost:5610/simple-directory
+      - PRIVATE_EVENTS_URL=http://localhost:8084
+      - PRIVATE_DIRECTORY_URL=http://localhost:8081
+      - PUBLIC_URL=http://localhost:5610/data-fair
+      - WS_PUBLIC_URL=ws://localhost:5610/data-fair
       - OBSERVER_ACTIVE=false
 
-      - PRIVATE_PORTALS_MANAGER_URL=http://localhost:8097
+      - PRIVATE_PORTALS_MANAGER_URL=http://localhost:8098
       - SECRET_EVENTS=secret-events
 
   #####
@@ -81,41 +82,21 @@ services:
     image: ghcr.io/data-fair/events:main
     network_mode: host
     environment:
-      - PORT=8083
-      - MONGO_URL=mongodb://localhost:27017/data-fair-events
-      - PRIVATE_DIRECTORY_URL=http://localhost:5600/simple-directory
+      - PORT=8084
+      - MONGO_URL=mongodb://localhost:27018/data-fair-events
+      - PRIVATE_DIRECTORY_URL=http://localhost:5610/simple-directory
       - SECRET_IDENTITIES=secret-identities
       - SECRET_EVENTS=secret-events
       - SECRET_SENDMAILS=secret-sendmails
       - OBSERVER_ACTIVE=false
-
-  # processings:
-  #   profiles:
-  #     - dev
-  #   image: ghcr.io/data-fair/processings:chore-add-dframecontent
-  #   network_mode: host
-  #   depends_on:
-  #     - mongo
-  #   environment:
-  #     - PORT=8084
-  #     - CIPHER_PASSWORD=test
-  #     - IGNORE_ASSERT_REQ_INTERNAL=true
-  #     - OBSERVER_ACTIVE=false
-  #     - PRIVATE_DIRECTORY_URL=http://localhost:8080
-  #     - PRIVATE_EVENTS_URL=http://localhost:8083
-  #     - SECRET_EVENTS=secret-events
-  #     - SECRET_IDENTITIES=secret-identities
-  #   volumes:
-  #     - ./data/processings:/app/data
-  
 
   maildev:
     profiles:
       - dev
     image: maildev/maildev:2.1.0
     ports:
-      - 1080:1080
-      - 1025:1025
+      - 1081:1081
+      - 1026:1026
     # https://github.com/maildev/maildev/issues/484
     healthcheck:
       test: 'wget -O - http://127.0.0.1:$${MAILDEV_WEB_PORT}$${MAILDEV_BASE_PATHNAME}/healthz || exit 1'
@@ -127,9 +108,9 @@ services:
   elasticsearch:
     profiles:
       - dev
+      - test
     image: ghcr.io/data-fair/elasticsearch:7.x
-    ports:
-      - 9200:9200
+    network_mode: host
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -139,11 +120,11 @@ services:
     volumes:
       - elasticsearch-data:/usr/share/elasticsearch/data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
-      start_period: 10s
+      test: ["CMD-SHELL", "curl -f http://localhost:9200 || exit 1"]
+      interval: 10s
       timeout: 5s
-      interval: 2s
-      retries: 50
+      retries: 5
+      start_period: 30s
 
   mongo:
     profiles:
@@ -151,7 +132,7 @@ services:
       - dev
     image: mongo:4.2
     ports:
-      - 27017:27017
+      - 27018:27017
     volumes:
       - mongo-data:/data/db
 
