chore: setup for segregated dev envs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,16 @@ services:
       - dev
     image: nginx:1.29.4-alpine
     network_mode: host
+    environment:
+      - NGINX_PORT=${NGINX_PORT}
+      - SD_PORT=${SD_PORT}
+      - DF_PORT=${DF_PORT}
+      - EVENTS_PORT=${EVENTS_PORT}
+      - PROCESSINGS_PORT=${PROCESSINGS_PORT}
+      - DEV_API_PORT=${DEV_API_PORT}
+      - DEV_UI_PORT=${DEV_UI_PORT}
     volumes:
-      - ./dev/resources/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./dev/resources/nginx.conf.template:/etc/nginx/templates/default.conf.template:ro
 
   #####
   # required services from the data-fair stack
@@ -26,22 +34,26 @@ services:
     depends_on:
       - mongo
     environment:
-      - PORT=8081
-      - ADMINS=["superadmin@test.com"]
-      - CIPHER_PASSWORD=dev
-      - CONTACT=contact@test.com
-      - MANAGE_SITES=true
-      - MONGO_URL=mongodb://localhost:27018/simple-directory
-      - OBSERVER_ACTIVE=false
-      - PUBLIC_URL=http://localhost:5610/simple-directory
-      - STORAGE_TYPE=file
-      - SECRET_SITES=secret-sites
+      PORT: ${SD_PORT}
+      ADMINS: |
+        ["superadmin@test.com"]
+      CIPHER_PASSWORD: dev
+      CONTACT: contact@test.com
+      MANAGE_SITES: true
+      MONGO_URL: mongodb://localhost:${MONGO_PORT}/simple-directory
+      OBSERVER_ACTIVE: false
+      PUBLIC_URL: http://localhost:${NGINX_PORT}/simple-directory
+      STORAGE_TYPE: file
+      SECRET_SITES: secret-sites
       # When we test permissions, we need to authenticate many users from the same IP.
-      - AUTHRATELIMIT_ATTEMPTS=500
-      - AUTHRATELIMIT_DURATION=30
+      AUTHRATELIMIT_ATTEMPTS: 500
+      AUTHRATELIMIT_DURATION: 30
       # To test contact form
-      - MAILDEV_ACTIVE=true
-      - ANONYMOUS_CONTACT_FORM=true
+      MAILDEV_ACTIVE: true
+      MAIL_DEV_URL: http://localhost:${MAILDEV_UI_PORT}
+      MAILS_TRANSPORT: |
+        {"port": "MAILDEV_SMTP_PORT","ignoreTLS": true,"host": "localhost"}
+      ANONYMOUS_CONTACT_FORM: true
 
     volumes:
       - ./dev/resources/users.json:/app/data/users.json
@@ -60,16 +72,16 @@ services:
       elasticsearch:
         condition: service_healthy
     environment:
-      - PORT=8082
-      - MONGO_URL=mongodb://localhost:27018/data-fair
-      - DIRECTORY_URL=http://localhost:5610/simple-directory
-      - PRIVATE_EVENTS_URL=http://localhost:8084
-      - PRIVATE_DIRECTORY_URL=http://localhost:8081
-      - PUBLIC_URL=http://localhost:5610/data-fair
-      - WS_PUBLIC_URL=ws://localhost:5610/data-fair
+      - PORT=${DF_PORT}
+      - MONGO_URL=mongodb://localhost:${MONGO_PORT}/data-fair
+      - ES_HOST=localhost:${ES_PORT}
+      - DIRECTORY_URL=http://localhost:${NGINX_PORT}/simple-directory
+      - PRIVATE_EVENTS_URL=http://localhost:${EVENTS_PORT}
+      - PRIVATE_DIRECTORY_URL=http://localhost:${SD_PORT}
+      - PUBLIC_URL=http://localhost:${NGINX_PORT}/data-fair
+      - WS_PUBLIC_URL=ws://localhost:${NGINX_PORT}/data-fair
       - OBSERVER_ACTIVE=false
-
-      - PRIVATE_PORTALS_MANAGER_URL=http://localhost:8098
+      - PRIVATE_PORTALS_MANAGER_URL=http://localhost:${DEV_API_PORT}
       - SECRET_EVENTS=secret-events
 
   #####
@@ -82,9 +94,9 @@ services:
     image: ghcr.io/data-fair/events:main
     network_mode: host
     environment:
-      - PORT=8084
-      - MONGO_URL=mongodb://localhost:27018/data-fair-events
-      - PRIVATE_DIRECTORY_URL=http://localhost:5610/simple-directory
+      - PORT=${EVENTS_PORT}
+      - MONGO_URL=mongodb://localhost:${MONGO_PORT}/data-fair-events
+      - PRIVATE_DIRECTORY_URL=http://localhost:${NGINX_PORT}/simple-directory
       - SECRET_IDENTITIES=secret-identities
       - SECRET_EVENTS=secret-events
       - SECRET_SENDMAILS=secret-sendmails
@@ -95,8 +107,8 @@ services:
       - dev
     image: maildev/maildev:2.1.0
     ports:
-      - 1081:1081
-      - 1026:1026
+      - ${MAILDEV_UI_PORT}:1080
+      - ${MAILDEV_SMTP_PORT}:1025
     # https://github.com/maildev/maildev/issues/484
     healthcheck:
       test: 'wget -O - http://127.0.0.1:$${MAILDEV_WEB_PORT}$${MAILDEV_BASE_PATHNAME}/healthz || exit 1'
@@ -110,7 +122,8 @@ services:
       - dev
       - test
     image: ghcr.io/data-fair/elasticsearch:7.x
-    network_mode: host
+    ports:
+      - ${ES_PORT}:9200
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -132,7 +145,7 @@ services:
       - dev
     image: mongo:4.2
     ports:
-      - 27018:27017
+      - ${MONGO_PORT}:27017
     volumes:
       - mongo-data:/data/db
 
