--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test-deps": "docker compose --profile test up -d --wait",
     "dev-ui": "npm -w ui run dev",
     "dev-ingress-manager": "NODE_ENV=development node --disable-warning=ExperimentalWarning --watch dev/ingress-manager.ts",
-    "dev-zellij": "export DEV_SHELL=$(basename \"$SHELL\") && zellij --layout .zellij.kdl",
+    "dev-zellij": "dotenv -v DEV_SHELL=$(basename \"$SHELL\") -- zellij --layout .zellij.kdl",
     "lint": "eslint . && npm -w ui run lint",
     "lint-fix": "eslint --fix . && npm -w ui run lint-fix",
     "prepare": "husky || true",
@@ -58,6 +58,8 @@
     "@types/resolve-path": "^1.4.3",
     "@types/sanitize-html": "^2.16.0",
     "commitlint": "^19.8.1",
+    "dotenv": "^17.3.1",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.35.0",
     "eslint-plugin-vue": "^10.4.0",
     "eslint-plugin-vuetify": "^2.5.3",
