--- a/dev/resources/nginx.conf.template
+++ b/dev/resources/nginx.conf.template
@@ -1,37 +1,6 @@
-# nginx configuration file for Data Fair development and test environment
-
-user nginx;
-worker_processes auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
-events {
-    worker_connections 1024;
-}
-
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    # use header origin if referer is empty
-    map $http_referer $reqref {                                                 
-        default   $http_referer;                                               
-        ""        $http_origin;                                                      
-    }
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        ''      close;
-    }
 
     server {
-        listen 5610;
+        listen ${NGINX_PORT};
         server_name _;
         http2 on;
         client_max_body_size 0;
@@ -55,7 +24,7 @@ http {
           if ($host = "localhost") {
             return 302 /portals-manager/dev;
           }
-          proxy_pass http://localhost:5657;
+          proxy_pass http://localhost:${DEV_UI_PORT};
         }
         
         location = /portals-manager/ {  
@@ -63,35 +32,35 @@ http {
         }
 
         location / {
-          proxy_pass http://localhost:5657;
+          proxy_pass http://localhost:${DEV_UI_PORT};
         }
 
         location /portals-manager/api/ {
-          proxy_pass http://localhost:8098;
+          proxy_pass http://localhost:${DEV_API_PORT};
         }
 
         location ~ /portals-manager/(.*)-ui-config.js {
-          proxy_pass http://localhost:8098;
+          proxy_pass http://localhost:${DEV_API_PORT};
         }
         location /portals-manager/ {
-          proxy_pass http://localhost:6227;
+          proxy_pass http://localhost:${DEV_UI_PORT};
         }
 
         location /simple-directory/ {
-          proxy_pass http://localhost:8081;
+          proxy_pass http://localhost:${SD_PORT};
         }
 
         location /data-fair {
           rewrite  ^/data-fair/(.*) /$1 break;
-          proxy_pass http://localhost:8082;
+          proxy_pass http://localhost:${DF_PORT};
         }
 
         location /events/ {
-            proxy_pass http://localhost:8084;
+            proxy_pass http://localhost:${EVENTS_PORT};
         }
 
         location /processings/ {
-            proxy_pass http://localhost:8085;
+            proxy_pass http://localhost:${PROCESSINGS_PORT};
         }
 
         location /openapi-viewer/ {
@@ -99,4 +68,3 @@ http {
             add_header Content-Type text/plain;
         }
     }
-}
