--- a/portal/package.json
+++ b/portal/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "check-types": "nuxt typecheck",
-    "dev": "NUXT_MONGO_URL=mongodb://localhost:27018/data-fair-portals-development NUXT_PORTAL_URL_PATTERN=http://{subdomain}.portals.localhost:5610 NUXT_PRIVATE_DIRECTORY_URL=http://localhost:8080 NUXT_FRAME_ANCESTORS=http://localhost:5610 nuxt dev",
+    "dev": "dotenv -v NUXT_MONGO_URL=mongodb://localhost:$MONGO_PORT/data-fair-portals-development -v NUXT_PORTAL_URL_PATTERN=http://{subdomain}.portals.localhost:$NGINX_PORT -v NUXT_PRIVATE_DIRECTORY_URL=http://localhost:$SD_PORT -v NUXT_FRAME_ANCESTORS=http://localhost:$NGINX_PORT nuxt dev",
     "generate": "nuxt generate",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
