fix: some wrong ports in dev env

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ DEV_PORTAL_PORT=5670
 DEV_OBSERVER_PORT=5671
 MAILDEV_UI_PORT=5672
 MAILDEV_SMTP_PORT=5673
+DEV_INGRESS_PORT=5674
 
 MONGO_PORT=5678
 ES_PORT=5679
